# test-dependabot

.github/: dependabot.yml
application-source/: pyproject.toml
