[tool.poetry]
name = "sample-python-project"
version = "0.1.0"
description = "Sample Python project with common dependencies"
authors = ["Your Name [you@example.com](mailto:you@example.com)"]
readme = "README.md"
packages = [{ include = "sample_project" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.65.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
flask = "^3.0.0"
requests = "2.32.3"
httpx = "^0.27.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
pydantic = "^1.10.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"
typer = "^0.12.0"
tqdm = "^4.66.0"
rich = "^14.3.3"
loguru = "0.7.3"
python-dateutil = "^2.9.0"
pyyaml = "6.0.3"
orjson = "3.11.7"
passlib = "^1.7.4"
bcrypt = "^5.0.0"
sqlalchemy = "2.0.48"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.3.0"
ruff = "^0.15.5"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
