[tool.poetry]
name = "sample-python-project"
version = "0.1.0"
description = "Sample Python project with common dependencies"
authors = ["Your Name [you@example.com](mailto:you@example.com)"]
readme = "README.md"
packages = [{ include = "sample_project" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
flask = "^3.0.0"
requests = "2.32.4"
httpx = "^0.27.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
pydantic = "^1.10.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"
typer = "^0.12.0"
tqdm = "^4.66.0"
rich = "^13.7.0"
loguru = "0.5.3"
python-dateutil = "^2.9.0"
pyyaml = "5.3.1"
orjson = "3.11.5"
passlib = "^1.7.4"
bcrypt = "^4.1.0"
sqlalchemy = "1.4.46"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
black = "^26.3.1"
ruff = "^0.4.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
